agregada vista con historias de los usuarios

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,6 +14,13 @@
       <ul class="nav navbar-nav">
         <li><a href="#">Link1</a></li>
         <li><a href="#">Link2</a></li>
+        <% if logged? %>
+          <li><%= link_to current_user.name, user_path(current_user), class: 'nav-item' %></li>
+          <li><%= link_to 'cerrar sesión', session_path(current_user), method: :delete %></li>
+        <% else %>
+          <li> <%= link_to 'iniciar sesión', users_sign_in_path %></li>
+          <li> <%= link_to 'Registrarse', users_sign_up_path %></li>
+        <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
@@ -32,4 +39,3 @@
     </div>
   </div>
 </nav>
-
